--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=jyoti123
 spring.main.allow-bean-definition-overriding=true
+server.port=8081
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
